--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-llama_index==0.9.48
+llama-index-core
+llama-index-llms-openai
+llama-index-llms-openai-like
+llama-index-embeddings-ollama
+llama-index-llms-ollama
+llama-index-callbacks-aim
+llama-index-embeddings-fastembed
+llama-index-retrievers-bm25
+llama-index-question-gen-guidance
+llama-index-vector-stores-chroma
+llama-index-readers-file
+llama-index-graph-stores-neo4j
 transformers
 torch
 fastembed
