--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ llama-index-llms-openai
 llama-index-llms-openai-like
 llama-index-embeddings-ollama
 llama-index-llms-ollama
+llama-index-llms-groq
 llama-index-callbacks-aim
 llama-index-embeddings-fastembed
 llama-index-retrievers-bm25
