--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ llama-index-llms-openai-like
 llama-index-embeddings-ollama
 llama-index-llms-ollama
 llama-index-llms-groq
+llama-index-llms-gemini
 llama-index-callbacks-aim
 llama-index-embeddings-fastembed
 llama-index-retrievers-bm25
